# ats-wasm-ai-inference

./: README.md
imagenet/: Cargo.toml
imagenet/src/: lib.rs
mnist/: Cargo.toml
mnist/src/: lib.rs
sentiment/: Cargo.toml  myfilter.yaml
sentiment/models/: README.md
sentiment/src/: lib.rs
