[lib]
crate-type = ["cdylib"]
name = "myfilter"

[package]
name = "my-wasm-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
proxy-wasm = "0.2.3"
log = "0.4"
primes = "0.3.0"
tract_flavour = { package = "tract-tensorflow", version = "0.17.7" }
image = { version = "0.24.3", default-features = false, features = ["jpeg"] }

